2006-10-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* makeinfo/tests/quote-args: Add missing $srcdir.

2006-10-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\singlequotechar): rename to \codequoteright.
	(\quoteexpand): rename to \rquoteexpand.
	(\codequoteleft): new def, to look for @set codequotebacktick.
	(\lquoteexpand, \quoteexpand): new defs.
	(\lquoteChar, \rquoteChar, \dashChar, \underChar: new \chardef's.
	(\code): must use new \...Char values, since now ` is active.

2006-10-01  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_bibtex): also run bibtex if "no .aux file" in
	the .log, and "\bibdata" in the aux, for the first run of a btxmac
	file.  From Oleg Katsitadze.

2006-09-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Inserting Braces): spurious ppp.

2006-09-22  Stepan Kasal  <kasal@ucw.cz>

	* configure.ac: Add a comment explaining `env -i PATH=$PATH'.

2006-09-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (code): spurious "in the printed manual", from
	Bob C.

2006-09-01  Eli Zaretskii  <eliz@gnu.org>

	* doc/texinfo.txi (Multitable Rows): Document the Info output of
	@headitem.

2006-08-26  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (command_table): new command @textdegree{}.
	* makeinfo/lang.c (cm_special_char): handle textdegree.
	* doc/texinfo.tex (\textdegree): define it.

	* doc/texinfo.txi (Output Formats): update Beebe paper reference.
	(Printed Books): update texinfo.tex reference.
	Report from VAN VLIERBERGHE Stef, 22 Aug 2006 22:05:27 +0200.

2006-08-23  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (man_rule_bin): use help2man -o, instead of
	redirection, so that `missing' can infer the output filename.

2006-08-13  Alexander E. Patrakov  <patrakov@ums.usu.ru>  (tiny change)

	* info/man.c (get_manpage_contents), info/info.c (main):
	Info apparently assumes equivalence of bytes and characters,
	leading to (for example) translated man output in multibyte
	locales being broken within a character.  In lieu of a